# rs-zero-to-mastery-course

exercises/activities/: Cargo.toml  requirement.txt  test.rest
exercises/activities/src/: math.rs  msg.rs
